--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,6 +19,6 @@ include_directories(${WEEKEND_RENDERING_INSTALL_INCLUDE_DIR})
 include_directories(${WEEKEND_RENDERING_HEADERS_DIR})
 
 add_subdirectory(src)
-add_subdirectory(test)
+#add_subdirectory(test)
 
 
