--- a/src/rendering/CMakeLists.txt
+++ b/src/rendering/CMakeLists.txt
@@ -8,8 +8,10 @@ add_subdirectory(vulkan)
 set(SOURCE_FILES render_api.cpp render_api.hpp window.hpp window.cpp ${RENDER_API_SOURCE})
 message(${SOURCE_FILES})
 
+message("" ${GLFW_INCLUDE_DIRS})
+
 include_directories(${GLFW_INCLUDE_DIRS} ${RENDER_API_INCLUDES})
-add_library(rendering ${SOURCE_FILES})
+add_library(rendering SHARED STATIC ${SOURCE_FILES})
 target_link_libraries(rendering glfw ${GLFW_LIBRARIES} ${RENDER_API_LIBRARIES})
 
 install(TARGETS rendering DESTINATION ${WEEKEND_RENDERING_INSTALL_LIB_DIR}/rendering)
